--- a/NTabs/NTabs.html
+++ b/NTabs/NTabs.html
@@ -9,6 +9,7 @@
 <body>
     <section>
         <div class="tabs">
+            <!--标签-->
             <nav>
                 <ul>
                     <li><a href="#section-bar-1"><span>Home</span></a></li>
@@ -18,6 +19,7 @@
                     <li><a href="#section-bar-5"><span>Settings</span></a></li>
                 </ul>
             </nav>
+            <!--content域-->
             <div class="content-wrap">
                 <section id="section-bar-1">
                     <p>1</p>
@@ -35,9 +37,7 @@
                     <p>5</p>
                 </section>
             </div>
-            <!-- /content -->
         </div>
-        <!-- /tabs -->
     </section>
     <script src="NTabs.js"></script>
     <script>
